--- a/about.html
+++ b/about.html
@@ -65,6 +65,29 @@
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
             border-radius: 5px;
         }
+
+        footer {
+            background-color: #007BFF;
+            color: #fff;
+            padding: 15px;
+            text-align: center;
+            width: 98%;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
+
+        .footer-content {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        /* Adjustments for smaller screens */
+        @media screen and (max-width: 600px) {
+            .footer-content {
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 
@@ -111,6 +134,12 @@
             Supplementary Information:<a href="/dow.doc" download>Download</a>
         </p>
     </div>
+    <footer>
+        <div class="footer-content">
+            <p>National Institute of Technology Srinagar</p>
+            <p>&copy; 2023 NIT Srinagar,J&K India.All rights reserved.</p>
+        </div>
+    </footer>
     <script src="indexabout.js"></script>
 </body>
 
