--- a/contact.html
+++ b/contact.html
@@ -7,54 +7,55 @@
     <title>Contact Us</title>
 </head>
 <style>
-     body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-        }
+    body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        background-color: #f2f2f2;
+    }
 
-        /* Header Styles */
-        header {
-            background-color: #007BFF;
-            color: #fff;
-            padding: 10px;
-        }
+    /* Header Styles */
+    header {
+        background-color: #007BFF;
+        color: #fff;
+        padding: 10px;
+    }
 
-        .navbar {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
+    .navbar {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 
-        .navbar-brand {
-            font-size: 24px;
-            font-weight: bold;
-        }
+    .navbar-brand {
+        font-size: 24px;
+        font-weight: bold;
+    }
 
-        .nav-links {
-            list-style: none;
-            display: flex;
-        }
+    .nav-links {
+        list-style: none;
+        display: flex;
+    }
 
-        .nav-links li {
-            margin-right: 20px;
-        }
+    .nav-links li {
+        margin-right: 20px;
+    }
 
-        .nav-links li a {
-            text-decoration: none;
-            color: #fff;
-            font-size: 16px;
-            transition: color 0.3s;
-        }
+    .nav-links li a {
+        text-decoration: none;
+        color: #fff;
+        font-size: 16px;
+        transition: color 0.3s;
+    }
 
-        .nav-links li a:hover {
-            color: #f8c947;
-        }
+    .nav-links li a:hover {
+        color: #f8c947;
+    }
 
-        .burger {
-            display: none;
-        }
+    .burger {
+        display: none;
+    }
+
     .content {
         max-width: 800px;
         margin: 20px auto;
@@ -77,6 +78,29 @@
     .contact-info strong {
         font-weight: bold;
         margin-right: 10px;
+    }
+
+    footer {
+        background-color: #007BFF;
+        color: #fff;
+        padding: 15px;
+        text-align: center;
+        width: 98%;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
+
+    .footer-content {
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
+    /* Adjustments for smaller screens */
+    @media screen and (max-width: 600px) {
+        .footer-content {
+            font-size: 14px;
+        }
     }
 </style>
 
@@ -106,6 +130,12 @@
             <p><strong>Email:</strong> ranjeetkumarrout@nitsri.net</p>
         </div>
     </div>
+    <footer>
+        <div class="footer-content">
+            <p>National Institute of Technology Srinagar</p>
+            <p>&copy; 2023 NIT Srinagar,J&K India.All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
