--- a/index.html
+++ b/index.html
@@ -7,67 +7,6 @@
     <title>PRmePRed</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        .content {
-            margin-top: 20px;
-            padding: 20px;
-            background-color: #f0f0f0;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-        }
-
-        /* Styling for the "Tips" link */
-        a {
-            color: #007BFF;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        ul {
-            padding: 0;
-            margin: 10px 0;
-            list-style-type: none;
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
-
-        /* Styling for the buttons */
-        .buttons-container {
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        .buttons-container button {
-            margin: 5px;
-        }
-
-        textarea {
-            width: 100%;
-            resize: vertical;
-            border: 1px solid #ccc;
-            padding: 8px;
-            font-size: 16px;
-            border-radius: 5px;
-        }
-
-        button {
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
     </style>
 </head>
 
@@ -87,7 +26,6 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <!-- Add an image -->
     <img src="proarg.png" alt="Your Image" width="100%" height="200px">
 
     <div class="content">
@@ -99,45 +37,46 @@
             <li><button onclick="clearSequences()">Clear sequences</button></li>
             <li>(OR) Upload sequence(s) file in FASTA format: (up to 2 Mb)</li>
         </ul>
-
-        <!-- Textarea for protein sequences -->
         <textarea id="proteinSequences" rows="10" cols="50"></textarea>
-
-        <!-- File Upload Input -->
         <label for="fastaFile">Select File:</label>
         <input type="file" id="fastaFile" accept=".fasta">
-
-        <!-- Threshold Selection -->
         <label for="thresholdSelect">Select Threshold:</label>
         <input type="checkbox" id="enableThreshold" onchange="toggleThreshold()">
         <input type="number" id="thresholdSelect" step="0.01" min="0" max="1" value="0.5" disabled>
         <button onclick="runPrediction()">Run Prediction</button>
         <button onclick="resetForm()">Reset</button>
     </div>
-
+    <footer>
+        <div class="footer-content">
+            <p>National Institute of Technology Srinagar</p>
+            <p>&copy; 2023 NIT Srinagar,J&K India.All rights reserved.</p>
+        </div>
+    </footer>
     <script src="index.js"></script>
     <script>
         function toggleThreshold() {
             const thresholdInput = document.getElementById("thresholdSelect");
             const enableThreshold = document.getElementById("enableThreshold").checked;
             thresholdInput.disabled = !enableThreshold;
-
-            // If the threshold input is enabled, set its value to 0.5 (you can set any default value)
             if (enableThreshold) {
                 thresholdInput.value = "0.5";
             } else {
-                // If the threshold input is disabled, clear its value
                 thresholdInput.value = "";
             }
         }
         function loadDemoSequences() {
-            // Sample demo sequences (you can modify with your own)
-            const demoSequences = `>Sequence 1
-    ATGGAGTTCGACGCTGCGTAGTCTGACCGTAGCGTAGCTGCGT
-    >Sequence 2
-    ATGCGATCGATCGAGTCTACGATCGGACTAGCTACGATCGATC
-    >Sequence 3
-    ATCGTAGCTAGCTAGCTAGCTACGATCGGACTGACTGACTAGCT`;
+            const demoSequences = `>Q92997
+MGETKIIYHLDGQETPYLVKLPLPAERVTLADFKGVLQRPSYKFFFKSMDDDFGVVKEEISDDNA
+KLPCFNGRVVSWLVSAEGSHPDPAPFCADNPSELPPPMERTGGIGDSRPPSFHPHAGGGSQENLD
+NDTETDSLVSAQRERPRRRDGPEHATRLNGTAKGERRREPGGYDSSSTLMSSELETTSFFDSDED
+DSTSRFSSSTEQSSASRLMRRHKRRRRKQKVSRIERSSSFSSITDSTMSLNIITVTLNMEKYNFL
+GISIVGQSNERGDGGIYIGSIMKGGAVAADGRIEPGDMLLQVNEINFENMSNDDAVRVLREIVHK
+PGPITLTVAKCWDPSPRGCFTLPRSEPIRPIDPAAWVSHTAAMTGTFPAYGMSPSLSTITSTSSS
+ITSSIPDTERLDDFHLSIHSDMAAIVKAMASPESGLEVRDRMWLKITIPNAFIGSDVVDWLYHNV
+EGFTDRREARKYASNLLKAGFIRHTVNKITFSEQCYYIFGDLCGNMANLSLHDHDGSSGASDQDT
+LAPLPHPGAAPWPMAFPYQYPPPPHPYNPHPGFPELGYSYGGGSASSQHSEGSRSSGSNRSGSDR
+RKEKDPKAGDSKSGGSGSESDHTTRSSLRGPRERAPSERSGPAASEHSHRSHHSLASSLRSHHTH
+PSYGPPGVPPLYGPPMLMMPPPPAAMGPPGAPPGRDLASVPPELTASRQSFRMAMGNPSEFFVDVM`;
 
             document.getElementById("proteinSequences").value = demoSequences;
         }
