--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <nav class="navbar">
         <div class="navbar-brand">PRmePRed</div>
         <ul class="nav-links" id="navLinks">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/dataset.html">Dataset</a></li>
-            <li><a href="/help.html">Help</a></li>
-            <li><a href="/contact.html">Contact Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="dataset.html">Dataset</a></li>
+            <li><a href="help.html">Help</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <div class="burger" onclick="toggleNav()">
             <div class="line1"></div>
