--- a/help.html
+++ b/help.html
@@ -109,10 +109,10 @@
         <nav class="navbar">
             <div class="navbar-brand">PRmePRed</div>
             <ul class="nav-links" id="navLinks">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/dataset.html">Dataset</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="dataset.html">Dataset</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="burger" onclick="toggleNav()">
                 <div class="line1"></div>
