--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
             and its impact on cellular functions.
         </p>
         <p>
-            Supplementary Information:<a href="/dow.doc" download>Download</a>
+            Supplementary Information:<a href="dow.doc" download>Download</a>
         </p>
     </div>
     <footer>
