--- a/help.html
+++ b/help.html
@@ -133,7 +133,7 @@
                     sequences are in FASTA format.</li>
             </ol>
             <p>
-                Supplementary Information:<a href="/dow.doc" download>Download</a>
+                Supplementary Information:<a href="dow.doc" download>Download</a>
             </p>
         </div>
     </div>
