--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="content">
         <p>Paste or upload your protein sequences (up to 25) in FASTA format.</p>
         <p>The maximum limit for file upload is 2 Mb.</p>
-        <p><a href="/tips.html">Tips</a>
+        <p><a href="tips.html">Tips</a>
         <ul>
             <li><button onclick="loadDemoSequences()">Load demo sequences</button></li>
             <li><button onclick="clearSequences()">Clear sequences</button></li>
