--- a/dataset.html
+++ b/dataset.html
@@ -199,7 +199,7 @@
                 studies and separately prepared an independent dataset for final evaluation and comparison.
             </p>
             <p>
-                Supplementary Information:<a href="/dow.doc" download>Download</a> &nbsp; &nbsp; &nbsp;
+                Supplementary Information:<a href="dow.doc" download>Download</a> &nbsp; &nbsp; &nbsp;
                 Datasets:<a href="dataset.zip" download>View</a>
             </p>
         </div>
