--- a/index.html
+++ b/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRmePRed</title>
+    <title>DeepPRMS</title>
     <link rel="stylesheet" href="style.css">
     <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+        }
+
+        .navbar {
+            /* Existing styles for the navbar */
+            margin-bottom: 20px;
+            /* Add margin to the bottom to create space between navbar and content */
+        }
+
+        .header-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 150px;
+            color: #007BFF;
+            text-align: center;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+            margin-top: 20px;
+            /* Add margin to the top to create space between header and navbar */
+            padding: 20px;
+        }
+
+        .header-text {
+            font-size: 40px;
+            font-weight: bold;
+            letter-spacing: 1px;
+            margin-top: 10px;
+        }
+
+        .header-subtext {
+            font-size: 25px;
+            font-weight: normal;
+            margin-top: 10px;
+        }
     </style>
 </head>
+
 <body>
     <nav class="navbar">
-        <div class="navbar-brand">PRmePRed</div>
+        <div class="navbar-brand">DeepPRMS
+        </div>
         <ul class="nav-links" id="navLinks">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -24,8 +66,11 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <img src="proarg.png" alt="Your Image" width="100%" height="200px">
-
+    <!-- <img src="proarg.png" alt="Your Image" width="100%" height="200px"> -->
+    <div class="header-container">
+        <div class="header-text">DeepPRMS</div>
+        <div class="header-subtext">Advanced deep learning model to predict protein arginine methylation sites</div>
+    </div>
     <div class="content">
         <p>Paste or upload your protein sequences (up to 25) in FASTA format.</p>
         <p>The maximum limit for file upload is 2 Mb.</p>
@@ -94,8 +139,36 @@ PSYGPPGVPPLYGPPMLMMPPPPAAMGPPGAPPGRDLASVPPELTASRQSFRMAMGNPSEFFVDVM`;
             document.getElementById("proteinSequences").value = "";
         }
         function runPrediction() {
-            window.location.href = "prediction_results.html";
+            event.preventDefault();
+            const proteinSequences = document.getElementById("proteinSequences").value;
+            const threshold = document.getElementById("thresholdSelect").value;
+            const enableThreshold = document.getElementById("enableThreshold").checked;
+
+            // Make an API call to the backend using fetch
+            fetch('/predict', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded',
+                },
+                body: `protein_sequence=${encodeURIComponent(proteinSequences)}&threshold=${threshold}&enableThreshold=${enableThreshold}`
+            })
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    // Convert the data to a JSON string and encode it as a URL parameter
+                    console.log(data);
+                    const predictionResults = encodeURIComponent(JSON.stringify(data));
+
+                    // Redirect to the prediction_results.html page with the prediction results as a URL parameter
+                    window.location.href = `prediction_results.html?results=${predictionResults}`;
+                })
+                .catch(error => console.error(error));
         }
+
 
         function resetForm() {
             document.getElementById("proteinSequences").value = "";
