--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
         <nav class="navbar">
             <div class="navbar-brand">PRmePRed</div>
             <ul class="nav-links" id="navLinks">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="./templates/index.html">Home</a></li>
                 <li><a href="dataset.html">Dataset</a></li>
                 <li><a href="help.html">Help</a> </li>
                 <li><a href="contact.html">Contact</a></li>
