--- a/contact.html
+++ b/contact.html
@@ -164,7 +164,7 @@
         <nav class="navbar">
             <div class="navbar-brand">PRmePRed</div>
             <ul class="nav-links" id="navLinks">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="./templates/index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="help.html">Help</a> </li>
                 <li><a href="dataset.html">Dataset</a></li>
