--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeepPRMS</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
     </style>
 </head>
@@ -15,10 +15,10 @@
         </div>
         <ul class="nav-links" id="navLinks">
             <li><a href="index.html">Home</a></li>
-            <li><a href="../about.html">About</a></li>
-            <li><a href="../dataset.html">Dataset</a></li>
-            <li><a href="../help.html">Help</a></li>
-            <li><a href="../contact.html">Contact Us</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="dataset.html">Dataset</a></li>
+            <li><a href="help.html">Help</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <div class="burger" onclick="toggleNav()">
             <div class="line1"></div>
@@ -34,7 +34,7 @@
     <div class="content">
         <p>Paste or upload your protein sequences (up to 25) in FASTA format.</p>
         <p>The maximum limit for file upload is 2 Mb.</p>
-        <p><a href="../tips.html">Tips</a>
+        <p><a href="tips.html">Tips</a>
         <ul>
             <li><button onclick="loadDemoSequences()">Load demo sequences</button></li>
             <li><button onclick="clearSequences()">Clear sequences</button></li>
@@ -55,7 +55,7 @@
             <p>&copy; 2023 NIT Srinagar,J&K India.All rights reserved.</p>
         </div>
     </footer>
-    <script src="../index.js"></script>
+    <script src="index.js"></script>
     <script>
         function handleFileSelect(event) {
             const file = event.target.files[0];
